# arbitrage

./: .gitignore  docker-compose.yml  pyproject.toml
src/arbitrage/: __init__.py
src/arbitrage/ingestion/: Dockerfile  config.py  events_timeline.py  histdownloader.py  ingestion.Dockerfile  investpy_data.py  main.py  pipeline.py  publishers.py  tickerscountry.py  timeline_stock.py
src/arbitrage/preprocessing/: data.py
tests/ingestion/: test_module_ingestion.py
