[project]
name = "arbitrage"
version = "0.1.0"
description = ""
authors = [
    {name = "caiogimenes",email = "ciaonemegi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "investpy (>=1.0.8,<2.0.0)",
    "kafka-python (>=2.2.15,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "pytest-mock (>=3.14.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "arbitrage", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
